# PDcalibrator

./: CMakeLists.txt  README.md  hhh.c  pest.c  sdkconfig  sdkconfig.old  test.c
components/UI/: CMakeLists.txt  UI.c
components/_crc/: CMakeLists.txt  README.md
components/_crc/include/: _crc.h
components/_debug/: CMakeLists.txt  README.md
components/_dsp/: CMakeLists.txt  README.md
components/_dsp/src/: _dsp.c
components/_fifo/: CMakeLists.txt  README.md
components/_fifo/include/: _fifo.h
components/_fifo/src/: _fifo.c
components/_filter/: CMakeLists.txt  README.md
components/_filter/include/: _filter.h
components/_misc/: CMakeLists.txt  README.md
components/_misc/src/: _misc.c
components/calibration/: CMakeLists.txt
components/calibration/include/: _debug.h  _dsp.h  _filter.h  _misc.h  build_defs.h  colors.h  conf.h  fd_dsp.h  font_Generic8.h  halPaint.h  mavlink_msg_fd.h  mavlink_msg_fd_clb.h  modGUI.h  modPaint.h  modParser.h  touch.h  xprintf.h
components/calibration/scr/: _debug.c  _dsp.c  colors.c  fd_dsp.c  xprintf.c
components/calibration/src/: _crc.c  _filter.c  _misc.c  calibration.c  modPaint.c  modParser.c  touch.c
components/colors/: CMakeLists.txt  README.md
components/disp/: CMakeLists.txt  disp.c
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
components/fd_dsp/: CMakeLists.txt  README.md
components/fd_dsp/include/: fd_dsp.h
components/fd_dsp/src/: fd_dsp.c
components/modGUI/: CMakeLists.txt  README.md
components/modGUI/src/: modGUI.c
components/modPaint/: CMakeLists.txt  README.md
components/modPaint/src/: modPaint.c
components/modParser/: CMakeLists.txt  README.md
components/modParser/src/: modParser.c
components/xprintf/: CMakeLists.txt  README.md
main/: Kconfig.projbuild  board.h  common.h  conf.h  idf_component.yml  main.c  mavlink_msg_fd.h
