# idf_component_register(
#     SRCS 
#         "src/_crc.c"
#         "src/_debug.c"
#         "src/_dsp.c"
#         "src/_fifo.c"
#         "src/_filter.c"
#         "src/_misc.c"
#         "src/calibration.c"
#         "src/colors.c"
#         "src/fd_dsp.c"
#         "src/modGUI.c"
#         "src/modPaint.c"
#         "src/modParser.c"
#         "src/xprintf.c"
#     INCLUDE_DIRS "include"
# )